2008-08-12  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated cairo and pixman
	to latest development snapshots. (closes: #546752)

2008-08-11  Paolo Borelli  <pborelli@katamail.com>

	* modulesets/gnome-suites-2.24.modules: remove some deps from gedit
	and gtksourceview.

2008-08-10  Björn Lindqvist  <bjourne@gmail.com>

	* modulesets/gnome-suites-2.22.modules:
	* modulesets/gnome-suites-2.24.modules: gnome-keyring depends on
	gconf, new dependency in 2.22. (closes #547194)

2008-08-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: pygtksourceview branched for
	GNOME 2.22.

2008-08-09  Luca Ferretti  <elle.uca@libero.it>
	
	* modulesets/gnome-2.24.modules: Added gnome-sound-theme.

2008-08-07  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.24.modules: Added kiwi and flumotion. 
	flumotion might theoretically build if your jhbuild has access to 
	twisted.

2008-08-06  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.24.modules: add mission version

2008-08-06  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-suites-2.24.modules: move empathy in the desktop
	suite, remove gtksourceview-1.0
	* modulesets/freedesktop-2.24.modules:
	* modulesets/gnome-external-deps-2.24.modules: move telepathy-glib,
	libtelepathy and telepathy-mission-control in the external
	dependencies

2008-08-05  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: gtksourceview
	branched for 2.22.

2008-08-05  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.22.modules:
	gnome-backgrounds branched for gnome-2-22.

2008-08-03  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-2.24.modules: Epiphany Extensions has
	branched for gnome-2-24.

2008-08-01  Diego Escalante Urrelo  <diegoe@gnome.org>

	* modulesets/gnome-suites-2.22.modules: Use specific branches for