@@ -1,3 +1,8 @@
+2008-08-13  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/bot.py: new 'jhbuild bot' command; with --setup
+	option to create a buildbot slave instance.
+
 2008-08-12  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-external-deps-2.24.modules: updated cairo and pixman
